<?xml version="1.0"?>
<package>
  <name>baxter_myo</name>
  <version>1.0.0</version>
  <description>
    Package that allows the baxter to follow inputs using the Myo armband.
  </description>

  <maintainer email="n.nardelli@sms.ed.ac.uk">
    Nantas Nardelli
  </maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ipab-rad/baxter_myo</url>
  <url type="repository">
    https://github.com/ipab-rad/baxter_myo
  </url>
  <url type="bugtracker">
    https://github.com/ipab-rad/baxter_myo/issues
  </url>
  <author>Nantas Nardelli</author>
  <author>Alejandro Bordallo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
